--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,15 @@ uuid = "87be438c-38ae-47c4-9398-763eabe5c3be"
 authors = ["jverzani <jverzani@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+ArbNumerics = "7e558dbc-694d-5a72-987c-6f4ebed21442"
+
 [compat]
 julia = "1"
+Roots = "1"
+ArbNumerics = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
