--- a/Project.toml
+++ b/Project.toml
@@ -6,13 +6,11 @@ version = "0.1.0"
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-ArbNumerics = "7e558dbc-694d-5a72-987c-6f4ebed21442"
-Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 
 [compat]
 julia = "1"
-ArbNumerics = "1"
-Roots = "1"
+Polynomials = "1.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
