--- a/Project.toml
+++ b/Project.toml
@@ -5,18 +5,13 @@ version = "0.1.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
-MutableArithmetics = "d8a4904e-b15c-11e9-3269-09a3773c0cb0"
-Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 
 [compat]
-julia = "1.4"
-Polynomials = "1,2"
-Roots = "1.0.8"
+julia = "1.2"
 
 [extras]
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Polynomials"]
