--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "RealPolynomialRoots"
 uuid = "87be438c-38ae-47c4-9398-763eabe5c3be"
 authors = ["jverzani <jverzani@gmail.com> and contributors"]
-version = "0.1.1"
+version = "0.1.2"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
 julia = "1.2"
+LinearAlgebra = "1.6"
 
 [extras]
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
